@@ -78,8 +78,8 @@ CUL_WS_Parse($$)
 
   my $firstbyte = hex($a[1]);
   my $cde = ($firstbyte&7) + 1;
-
   my $type = $tlist{$a[2]} ? $tlist{$a[2]} : "unknown";
+
   if(!$defptr{$cde}) {
     Log 1, "CUL_WS UNDEFINED $type sensor detected, code $cde";
     return "UNDEFINED CUL_WS: $cde";
@@ -87,78 +87,110 @@ CUL_WS_Parse($$)
 
   $hash = $defptr{$cde};
   my $name = $hash->{NAME};
-
+  my $typbyte = hex($a[2]) & 7;
+  my $sfirstbyte = $firstbyte & 7;
   my $val = "";
+  my $devtype = "unknown";
 
-  if(@a == 5) {                 # 433MHz RainSensor
-    
-    my $c = $hash->{corr1} ? $hash->{corr1} : 1;
-    $val = "R: " . (hex($a[5].$a[2].$a[3]) * $c);
-
-  } elsif(@a == 9) {            #  S300TH
-
-    my $sgn = ($firstbyte&8) ? -1 : 1;
-    my $tmp = $sgn * ($a[6].$a[3].".".$a[4]) + $hash->{corr1};
-    my $hum = ($a[7].$a[8].".".$a[5]) + $hash->{corr2};
-    $val = "T: $tmp  H: $hum";
-
-  } elsif(@a == 13) {           #  WS7000 sensors
+  if($sfirstbyte == 7) {
 
 
-    if($type eq "brightness") {
+    if($typbyte == 0) {
+      my $sgn = ($firstbyte&8) ? -1 : 1;
+      my $tmp = $sgn * ($a[6].$a[3].".".$a[4]) + $hash->{corr1};
+      $val = "T: $tmp";
+      $devtype = "CUL_WS WS7000 Temp";
+     
+    }
 
-      # TODO
-      my $br = hex($a[3].$a[4].$a[5].$a[6]) + $hash->{corr1};
+    if($typbyte == 1) {
+      my $sgn = ($firstbyte&8) ? -1 : 1;
+      my $tmp = $sgn * ($a[6].$a[3].".".$a[4]) + $hash->{corr1};
+      my $hum = ($a[7].$a[8].".".$a[5]) + $hash->{corr2};
+      $val = "T: $tmp  H: $hum";
+      $devtype = "CUL_WS WS7000 Temp/Hum";
+    }
+
+    if($typbyte == 2) {
+      #my $more = ($firstbyte&8) ? 0 : 1000;
+      my $c = $hash->{corr1} ? $hash->{corr1} : 1;
+      my $hexcount = hex($a[5].$a[3].$a[4]) + $c;
+      $val = "R: $hexcount";
+      $devtype =  "CUL_WS WS7000 Rain";
+    }
+
+    if($typbyte == 3) {
+      my $hun = ($firstbyte&8) ? 100 : 0;
+      my $speed = ($a[6].$a[3].".".$a[4])+$hun;
+      my $dir  = (($a[7]&3).$a[8].$a[5])+0;
+      my $swing = ($a[7]&6) >> 2;
+      $val = "W: $speed D: $dir A: $swing";
+      $devtype = "CUL_WS WS7000 Wind";
+    }
+
+    if($typbyte == 4) {
+      my $sgn = ($firstbyte&8) ? -1 : 1;
+      my $tmp = $sgn * ($a[6].$a[3].".".$a[4]) + $hash->{corr1};
+      my $hum = ($a[7].$a[8].".".$a[5]) + $hash->{corr2};
+      my $prs = ($a[9].$a[10])+ 900 + $hash->{corr3};
+      if ($prs < 930) {
+         $prs = $prs + 100;
+      }
+      if(@a == 13) {
+        $val = "T: $tmp  H: $hum  P: $prs";
+      } else {
+        $val = "T: $tmp  H: $hum  P: $prs lenerr";
+      }
+      $devtype = "CUL_WS WS7000 Indoor";
+    }
+
+    if($typbyte == 5) {
+      my $fakt = 1;
+      my $rawfakt = ($a[5])+0;
+      if($rawfakt == 1) { $fakt =   10; }
+      if($rawfakt == 2) { $fakt =  100; }
+      if($rawfakt == 3) { $fakt = 1000; }
+     
+      my $br = (hex($a[5].$a[4].$a[3])*$fakt)  + $hash->{corr1};
       $val = "B: $br";
+      $devtype = "CUL_WS WS7000 Brightness";
+    }
 
-    } elsif($type eq "temp/hum/press") {
+    if($typbyte == 6) {                   #wurde nie gebaut
+      $devtype = "CUL_WS WS7000 Pyro";
+    }
+    if($typbyte == 7) {
+      $devtype = "CUL_WS unknown";
+    }
+
+  } else {
+
+    if(@a == 9) {            #  S300TH
 
       my $sgn = ($firstbyte&8) ? -1 : 1;
       my $tmp = $sgn * ($a[6].$a[3].".".$a[4]) + $hash->{corr1};
       my $hum = ($a[7].$a[8].".".$a[5]) + $hash->{corr2};
-      my $prs = ($a[9].$a[10].".".$a[11]) + $hash->{corr3};
-      $val = "T: $tmp  H: $hum  P: $prs";
+      $val = "T: $tmp  H: $hum";
+      $devtype = "S300TH";
 
-    } elsif($type eq "wind") {
+    } elsif(@a == 15) {           #  KS300/2
 
-      # TODO
-      my $wnd = hex($a[3].$a[4].$a[5].$a[6]) + $hash->{corr1};
-      $val = "W: $wnd";
-
-    } elsif($type eq "rain") {
-
-      # TODO
-      my $c = $hash->{corr1} ? $hash->{corr1} : 1;
-      my $rain = hex($a[3].$a[4].$a[5].$a[6]) * $c;
-      $val = "R: $rain";
-
-    } else {
-
-      Log 1, "CUL_WS UNKNOWN sensor detected, $msg";
-      return "UNKNOWN CUL_WS: $cde";
-
-    }
-
-  } elsif(@a == 15) {           #  KS300/2
-
-    my $c = $hash->{corr4} ? $hash->{corr4} : 255;
-    my $rain = sprintf("%0.1f", hex("$a[14]$a[11]$a[12]") * $c / 1000);
-    my $wnd  = sprintf("%0.1f", "$a[9]$a[10].$a[7]" + $hash->{corr3});
-    my $hum  = sprintf( "%02d", "$a[8]$a[5]" + $hash->{corr2});
-    my $tmp  = sprintf("%0.1f", ("$a[6]$a[3].$a[4]"+$hash->{corr1}) *
+      my $c = $hash->{corr4} ? $hash->{corr4} : 255;
+      my $rain = sprintf("%0.1f", hex("$a[14]$a[11]$a[12]") * $c / 1000);
+      my $wnd  = sprintf("%0.1f", "$a[9]$a[10].$a[7]" + $hash->{corr3});
+      my $hum  = sprintf( "%02d", "$a[8]$a[5]" + $hash->{corr2});
+      my $tmp  = sprintf("%0.1f", ("$a[6]$a[3].$a[4]"+$hash->{corr1}) *
                                 (($a[3] & 8) ? -1 : 1));
-    my $ir = ((hex($a[1]) & 0x2)) ? "yes" : "no";
+      my $ir = ((hex($a[1]) & 0x2)) ? "yes" : "no";
 
-    $val = "T: $tmp  H: $hum  W: $wnd  R: $rain  IR: $ir";
+      $val = "T: $tmp  H: $hum  W: $wnd  R: $rain  IR: $ir";
+      $devtype = "KS300/2";
 
-  } else {
-
-    Log 1, "CUL_WS UNKNOWN sensor detected, $msg";
-    return "UNKNOWN CUL_WS: $cde";
+    } 
 
   }
 
-  Log GetLogLevel($name,4), "CUL_WS $name: $val";
+  Log GetLogLevel($name,4), "CUL_WS $devtype sensor $name: $val";
 
   $hash->{STATE} = $val;                      # List overview
   $hash->{READINGS}{state}{TIME} = TimeNow(); # For list
