@@ -59,7 +59,6 @@
       <a href="#EMWZ">EMWZ</a> &nbsp;
       <a href="#FHT">FHT</a> &nbsp;
       <a href="#FHZ">FHZ</a> &nbsp;
-      <a href="#FS10">FS10</a> &nbsp;
       <a href="#FS20">FS20</a> &nbsp;
       <a href="#HMS">HMS</a> &nbsp;
       <a href="#FHEMWEB">FHEMWEB</a> &nbsp;
@@ -2348,26 +2347,6 @@ A line ending with \ will be concatenated with the next one, so long lines
     <li><a href="#dummy">dummy</a></li><br>
     <li><a href="#loglevel">loglevel</a></li>
     <li><a href="#model">model</a> (M232Voltage)</li>
-  </ul>
-  <br>
-
-</ul>
-
-<a name="FS10"></a>
-<h3>FS10</h3>
-<ul>
-  <br>
-
-  <b>Define</b> <ul>N/A</ul><br>
-
-  <b>Set </b> <ul>N/A</ul><br>
-
-  <b>Get</b> <ul>N/A</ul><br>
-
-  <b>Attributes</b>
-  <ul>
-    <li><a href="#loglevel">loglevel</a></li>
-    <li><a href="#model">model</a> (FS10)</li>
   </ul>
   <br>
 
